--- a/src/util/initial-config.yaml
+++ b/src/util/initial-config.yaml
@@ -113,8 +113,9 @@ full_node:
   port: 8444
 
   # Run multiple nodes with different databases by changing the database_path
-  database_path: db/blockchain_v19.db
-  simulator_database_path: sim_db/simulator_blockchain_v19.db
+  database_path: db/blockchain_v18.db
+  peer_table_path: db/peer_table.dat
+  simulator_database_path: sim_db/simulator_blockchain_v18.db
 
   # If True, starts an RPC server at the following port
   start_rpc_server: True
@@ -132,8 +133,10 @@ full_node:
 
   # How often to connect to introducer if we need to learn more peers
   introducer_connect_interval: 500
-  # Continue trying to connect to more peers until this number of connections
-  target_peer_count: 15
+  # Accept peers until this number of connections
+  target_peer_count: 25
+  # Initiate outbound connections until this number is hit.
+  target_outbound_peer_count: 10
   # Only connect to peers who we have heard about in the last recent_peer_threshold seconds
   recent_peer_threshold: 6000
 
