--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "about-window": "^1.13.4",
     "is-electron": "^2.2.0",
     "npm-audit-resolver": "^2.2.1",
     "react": "^16.13.1",
