Initial commit new code.

--- a/src/util/initial-config.yaml
+++ b/src/util/initial-config.yaml
@@ -114,6 +114,7 @@ full_node:
 
   # Run multiple nodes with different databases by changing the database_path
   database_path: db/blockchain_v18.db
+  peer_db_path: db/peer_table.db
   simulator_database_path: sim_db/simulator_blockchain_v18.db
 
   # If True, starts an RPC server at the following port
@@ -131,7 +132,7 @@ full_node:
   sync_blocks_behind_threshold: 20
 
   # How often to connect to introducer if we need to learn more peers
-  introducer_connect_interval: 500
+  peer_connect_interval: 500
   # Accept peers until this number of connections
   target_peer_count: 60
   # Initiate outbound connections until this number is hit.
