Try Super Linter at 3.9.0 and add linters

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -45,7 +45,7 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: docker://github/super-linter:v3.5.1
+        uses: docker://github/super-linter:v3.9.0
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
@@ -54,7 +54,11 @@ jobs:
           VALIDATE_JSON: true
           VALIDATE_MD: true
           VALIDATE_BASH: true
+          VALIDATE_SHELL_SHFMT: true
           VALIDATE_PYTHON: true
+          VALIDATE_PYTHON_PYLINT: true
+          VALIDATE_PYTHON_FLAKE8: true
+          VALIDATE_PYTHON_BLACK: true
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_TYPESCRIPT_ES: true
@@ -65,5 +69,6 @@ jobs:
           VALIDATE_ENV: true
           DISABLE_ERRORS: false
           PYTHONPATH: ${{ github.workspace }}:$PYTHONPATH
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 ...
