Place superlint in debug mode

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -69,5 +69,6 @@ jobs:
           DISABLE_ERRORS: false
           PYTHONPATH: ${{ github.workspace }}:$PYTHONPATH
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACTIONS_RUNNER_DEBUG: true
 
 ...
