--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -22,6 +22,7 @@
     "npm-audit-resolver": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
