added craco for local alias fixed typos

--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -7,10 +7,10 @@
   "homepage": "./",
   "main": "src/electron-starter.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --env=jsdom",
+    "eject": "craco eject",
     "electron": "electron .",
     "dev": "cross-env NODE_ENV=development nf start -p 3000",
     "dev:testnet": "cross-env TESTNET=true NODE_ENV=development nf start -p 3000",
@@ -68,6 +68,8 @@
     "@typescript-eslint/eslint-plugin": "4.6.0",
     "@typescript-eslint/parser": "4.6.0",
     "babel-core": "^7.0.0-bridge.0",
+    "craco": "^0.0.3",
+    "craco-alias": "^2.1.1",
     "cross-env": "^7.0.2",
     "cypress": "^5.5.0",
     "electron": "^8.5.2",
