--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -61,12 +61,12 @@
     "@types/lingui__react": "^2.8.3",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "babel-core": "^7.0.0-bridge.0",
     "craco": "^0.0.3",
     "craco-alias": "^2.1.1",
@@ -75,7 +75,7 @@
     "electron": "^8.5.3",
     "electron-osx-sign": "github:electron/electron-osx-sign#master",
     "electron-winstaller": "^4.0.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.12.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -90,11 +90,12 @@
     "foreman": "^3.0.1",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "4.0.0-next.64",
     "react-styleguidist": "^11.1.1",
     "redux-devtools-extension": "^2.13.8",
     "terser-webpack-plugin": "^5.0.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "webpack": "4.43.0"
   },
   "browserslist": {
     "production": [
