added minimum K=32 for mainnet added precision = 3 for plot size and total net size refactored plot page added hooks for open and select directory via electron api added react-form-hooks components for material-ui

--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -35,11 +35,13 @@
     "connected-react-router": "^6.8.0",
     "framer-motion": "^2.9.4",
     "is-electron": "^2.2.0",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "npm-audit-resolver": "^2.2.1",
     "polished": "^4.0.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.10.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -59,14 +61,15 @@
     "@types/jest": "^26.0.15",
     "@types/lingui__macro": "^2.7.4",
     "@types/lingui__react": "^2.8.3",
+    "@types/lodash": "^4.14.164",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "4.0.1",
-    "@typescript-eslint/parser": "4.0.1",
+    "@typescript-eslint/eslint-plugin": "4.6.1",
+    "@typescript-eslint/parser": "4.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "craco": "^0.0.3",
     "craco-alias": "^2.1.1",
