--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,8 @@ steps:
   - script: |
       . ./activate
       clang --version
-      pip wheel --use-pep517 --only-binary cbor2 --extra-index-url https://download.chia.net/simple/ --wheel-dir=wheels .
-    displayName: "Build wheels"
+      pip install --use-pep517 --only-binary cbor2 --extra-index-url https://download.chia.net/simple/ --wheel-dir=wheels .
+    displayName: "Build and install wheels"
 
   - task: NodeTool@0
     inputs:
@@ -67,10 +67,10 @@ steps:
     displayName: "Build Electron UI"
 
   #  Using wheels and release style install so no sh install.sh
-  - script: |
-      . ./activate
-      pip install .
-    displayName: "Install wheels"
+#  - script: |
+#      . ./activate
+#      pip install .
+#    displayName: "Install wheels"
 
 #  install-timelord.sh in venv
 #  - script: |
