--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -38,10 +38,10 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "npm-audit-resolver": "^2.2.1",
-    "polished": "^4.0.3",
+    "polished": "^4.0.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-hook-form": "^6.11.0",
+    "react-hook-form": "^6.11.4",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -53,37 +53,37 @@
     "styled-components": "^5.2.1",
     "tail": "^2.0.4",
     "use-dark-mode": "^2.3.1",
-    "ws": "^7.3.1"
+    "ws": "^7.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.7",
     "@lingui/cli": "^2.9.2",
     "@types/jest": "^26.0.15",
     "@types/lingui__macro": "^2.7.4",
     "@types/lingui__react": "^2.8.3",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "4.6.1",
-    "@typescript-eslint/parser": "4.6.1",
+    "@typescript-eslint/eslint-plugin": "4.8.1",
+    "@typescript-eslint/parser": "4.8.1",
     "babel-core": "^7.0.0-bridge.0",
     "craco": "^0.0.3",
     "craco-alias": "^2.1.1",
     "cross-env": "^7.0.2",
-    "cypress": "^5.5.0",
-    "electron": "^8.5.3",
+    "cypress": "^5.6.0",
+    "electron": "^8.5.5",
     "electron-osx-sign": "github:electron/electron-osx-sign#master",
     "electron-winstaller": "^4.0.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
@@ -91,14 +91,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
     "foreman": "^3.0.1",
-    "prettier-eslint": "^11.0.0",
+    "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react-scripts": "4.0.0-next.64",
-    "react-styleguidist": "^11.1.1",
+    "react-scripts": "4.0.0",
+    "react-styleguidist": "^11.1.3",
     "redux-devtools-extension": "^2.13.8",
     "terser-webpack-plugin": "^5.0.3",
-    "typescript": "^4.0.5",
-    "webpack": "4.43.0"
+    "typescript": "^4.1.2",
+    "webpack": "^5.6.0"
   },
   "browserslist": {
     "production": [
