--- a/electron-react/tsconfig.paths.json
+++ b/electron-react/tsconfig.paths.json
@@ -1,11 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "paths": {
-      "@chia/core": ["./components/core"],
-      "@chia/core*": ["./components/core*"],
-      "@chia/icons": ["./components/icons"],
-      "@chia/icons*": ["./components/icons*"]
+      "@chia/*": ["./components/*"]
     }
   }
 }
