--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -10,13 +10,12 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test --env=jsdom",
-    "eject": "craco eject",
+    "eject": "react-scripts eject",
     "electron": "electron .",
     "dev": "cross-env NODE_ENV=development nf start -p 3000",
     "dev:testnet": "cross-env TESTNET=true NODE_ENV=development nf start -p 3000",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "locale:add": "lingui add-locale",
     "locale:extract": "lingui extract",
     "locale:compile": "lingui compile",
     "eslint": "eslint src/**/*.[jt]s{,x}",
@@ -24,24 +23,27 @@
     "lint": "tsc --noEmit && npm run eslint"
   },
   "dependencies": {
-    "@lingui/macro": "^2.9.2",
-    "@lingui/react": "^2.9.2",
+    "@lingui/core": "^3.2.3",
+    "@lingui/macro": "^3.2.3",
+    "@lingui/react": "^3.2.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.10.0",
     "@rehooks/local-storage": "^2.4.0",
     "about-window": "^1.13.4",
     "byte-size": "^7.0.0",
     "connected-react-router": "^6.8.0",
     "framer-motion": "^2.9.4",
+    "history": "^5.0.0",
     "is-electron": "^2.2.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "npm-audit-resolver": "^2.2.1",
     "polished": "^4.0.4",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hook-form": "^6.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.5",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -57,7 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
-    "@lingui/cli": "^2.9.2",
+    "@lingui/cli": "^3.2.3",
     "@types/jest": "^26.0.15",
     "@types/lingui__macro": "^2.7.4",
     "@types/lingui__react": "^2.8.3",
@@ -90,15 +92,16 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
+    "eslint-webpack-plugin": "^2.4.0",
     "foreman": "^3.0.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "react-styleguidist": "^11.1.3",
     "redux-devtools-extension": "^2.13.8",
     "terser-webpack-plugin": "^5.0.3",
-    "typescript": "^4.1.2",
-    "webpack": "^5.6.0"
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.2"
   },
   "browserslist": {
     "production": [
