--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -84,6 +84,7 @@ jobs:
         brew install boost
         echo "BUILD_VDF_CLIENT is $BUILD_VDF_CLIENT"
         sh install.sh
+        ls venv/lib/python${{ matrix.python-version }}/site-packages/
 
     - name: Install timelord
       run: |
