--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,7 +42,7 @@ colorlog~=4.6.2
 keyring~=21.5.0
 bitstring~=3.1.7
 chiabip158~=0.16
-chiavdf~=0.12.28
+chiavdf~=0.13.0b1
 setproctitle~=1.1.10
 chiapos~=0.12.33
 websockets~=8.1
