--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -27,14 +27,6 @@ jobs:
         fetch-depth: 0
         # we need fetch-depth 0 so setuptools_scm can resolve tags
 
-    - name: Cache Chia Test Plots
-      uses: actions/cache@v2
-      with:
-        path: .chia/test-plots
-        key: chia_plots-${{ hashFiles('tests/full_node/fixtures.py', 'src/utils/block_tools.py') }}
-        restore-keys: |
-          chia_plots-
-
     - name: Setup Python environment
       uses: actions/setup-python@v2
       with:
@@ -66,6 +58,14 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
         restore-keys: |
           ${{ runner.os }}-pip-
+
+    - name: Cache Chia blocks
+      uses: actions/cache@v2
+      with:
+        path: .chia/blocks
+        key: chia_blocks-${{ hashFiles('tests/full_node/fixtures.py', 'src/utils/block_tools.py') }}
+        restore-keys: |
+          chia_blocks-
 
     - name: Test for secrets access
       id: check_secrets
