--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Cache Chia blocks
       uses: actions/cache@v2
       with:
-        path: ${{ HOME }}/.chia/blocks.chia/blocks
+        path: $HOME/.chia/blocks.chia/blocks
         key: chia_blocks-${{ hashFiles('tests/full_node/fixtures.py', 'src/utils/block_tools.py') }}
         restore-keys: |
           chia_blocks-
@@ -122,6 +122,7 @@ jobs:
     - name: Test blockchain code with pytest
       run: |
         . ./activate
+        echo $HOME
         ./venv/bin/py.test tests -s -v --durations 0
 
     - name: Upload MacOS artifacts
