--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -5,14 +5,14 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: MacOS-latest on Python 3.8, 3.9
+    name: Build MacOS installer on Python 3.8
     runs-on: ${{ matrix.os }}
     timeout-minutes: 90
     strategy:
       fail-fast: false
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8]
         os: [macOS-latest]
 
     steps:
@@ -59,14 +59,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Cache Chia blocks
-      uses: actions/cache@v2
-      with:
-        path: $HOME/.chia/blocks.chia/blocks
-        key: chia_blocks-${{ hashFiles('tests/full_node/fixtures.py', 'src/utils/block_tools.py') }}
-        restore-keys: |
-          chia_blocks-
-
     - name: Test for secrets access
       id: check_secrets
       shell: bash
@@ -89,20 +81,7 @@ jobs:
         INSTALL_PYTHON_VERSION: ${{ matrix.python-version }}
         BUILD_VDF_CLIENT: "N"
       run: |
-        brew install boost
         sh install.sh
-        rm -f venv/lib/python${{ matrix.python-version }}/site-packages/vdf_client
-
-    - name: Install timelord
-      run: |
-        . ./activate
-        sh install-timelord.sh
-        ./vdf_bench square_asm 400000
-
-    - name: Install developer requirements
-      run: |
-        . ./activate
-        venv/bin/python -m pip install -r requirements-dev.txt
 
     - name: Setup Node 12.x
       uses: actions/setup-node@v2.1.3
@@ -118,12 +97,6 @@ jobs:
         npm audit fix
         cd ../build_scripts
         sh build_macos.sh
-
-    - name: Test blockchain code with pytest
-      run: |
-        . ./activate
-        echo $HOME
-        ./venv/bin/py.test tests -s -v --durations 0
 
     - name: Upload MacOS artifacts
       uses: actions/upload-artifact@v2.2.1
