--- a/.github/workflows/build-test-macos.yml
+++ b/.github/workflows/build-test-macos.yml
@@ -46,13 +46,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Cache Chia blocks
-      uses: actions/cache@v2
-      with:
-        path: $HOME/.chia/blocks.chia/blocks
-        key: chia_blocks-${{ hashFiles('tests/full_node/fixtures.py') }}
-        restore-keys: |
-          chia_blocks-
+    - name: Download Chia test blocks
+      run: |
+        cd $HOME/.chia
+        curl -L https://download.chia.net/tests/blocks-2020-12-17.tgz | tar -zx
+        ls -l $HOME/.chia/blocks
 
     - name: Run install script
       env:
