Better ci mgmt and try Azure again

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,9 +90,9 @@ steps:
 
   - script: |
       . ./activate
+      export NOTARIZE=true
       export APPLE_NOTARIZE_USERNAME=$(APPLE_NOTARIZE_USERNAME)
       export APPLE_NOTARIZE_PASSWORD=$(APPLE_NOTARIZE_PASSWORD)
-      export CI=True
       cd build_scripts
       sh build_macos.sh
       ls -l final_installer
