--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -90,6 +90,7 @@ jobs:
 
     - name: Build MacOS DMG in Catalina
       env:
+        NOTARIZE: ${{ steps.check_secrets.outputs.HAS_SECRET }}
         APPLE_NOTARIZE_USERNAME: "${{ secrets.APPLE_NOTARIZE_USERNAME }}"
         APPLE_NOTARIZE_PASSWORD: "${{ secrets.APPLE_NOTARIZE_PASSWORD }}"
       run: |
