Change to bash - search for xcrun

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,11 +88,13 @@ steps:
 #      py.test tests -s -v
 #    displayName: "pytest"
 
-  - script: |
+  - bash: |
       . ./activate
       export NOTARIZE=true
       export APPLE_NOTARIZE_USERNAME=$(APPLE_NOTARIZE_USERNAME)
       export APPLE_NOTARIZE_PASSWORD=$(APPLE_NOTARIZE_PASSWORD)
+      echo "xcrun path is:"
+      type xcrun
       cd build_scripts
       sh build_macos.sh
       ls -l final_installer
