--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,9 +90,9 @@ steps:
 
   - bash: |
       . ./activate
-      export NOTARIZE=true
-      export APPLE_NOTARIZE_USERNAME=$(APPLE_NOTARIZE_USERNAME)
-      export APPLE_NOTARIZE_PASSWORD=$(APPLE_NOTARIZE_PASSWORD)
+      export NOTARIZE="true"
+      export APPLE_NOTARIZE_USERNAME="$(APPLE_NOTARIZE_USERNAME)"
+      export APPLE_NOTARIZE_PASSWORD="$(APPLE_NOTARIZE_PASSWORD)"
       cd build_scripts
       sh build_macos.sh
       ls -l final_installer
