--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Ubuntu-latest on Python 3.7, 3.8, 3.9
+    name: Build and test Ubuntu
     runs-on: ${{ matrix.os }}
     timeout-minutes: 90
     strategy:
