--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -1,10 +1,10 @@
-name: Windows Installer
+name: Windows Installer on Windows 10 and Python 3.7
 
 on: [push, pull_request]
 
 jobs:
   build:
-    name: Windows Installer on 3.7
+    name: Windows Installer on Windows 10 and Python 3.7
     runs-on: [windows-latest]
     timeout-minutes: 90
 
