--- a/.github/workflows/build-test-macos.yml
+++ b/.github/workflows/build-test-macos.yml
@@ -49,12 +49,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'Chia-Network/test-cache'
-        path: '.chia'
-
-    - name: Find test-cache
-      run: |
-        ls -al
-        ls -al .chia
+        path: '$HOME/.chia'
 
     - name: Run install script
       env:
