--- a/.github/workflows/build-test-ubuntu.yml
+++ b/.github/workflows/build-test-ubuntu.yml
@@ -57,12 +57,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'Chia-Network/test-cache'
-        path: '.chia'
-
-    - name: Find test-cache
-      run: |
-        ls -al
-        ls -al .chia
+        path: '$HOME/.chia'
 
     - name: Install ubuntu dependencies
       run: |
