--- a/.github/workflows/build-test-ubuntu.yml
+++ b/.github/workflows/build-test-ubuntu.yml
@@ -59,6 +59,12 @@ jobs:
         repository: 'Chia-Network/test-cache'
         path: '$HOME/.chia'
 
+    - name: Find test-cache
+      run: |
+        ls -al $HOME
+        echo "$HOME/.chia"
+        ls -al $HOME/.chia
+
     - name: Install ubuntu dependencies
       run: |
         sudo apt-get install software-properties-common
