--- a/.github/workflows/build-test-ubuntu.yml
+++ b/.github/workflows/build-test-ubuntu.yml
@@ -57,7 +57,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'Chia-Network/test-cache'
-        path: '${{ github.home }}/.chia'
+        path: '~/.chia'
 
     - name: Find test-cache
       run: |
