--- a/.github/workflows/build-test-macos.yml
+++ b/.github/workflows/build-test-macos.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'Chia-Network/test-cache'
-        path: '~/.chia'
+        path: '.chia'
 
     - name: Link home directory
       run: |
