add version so we can find the right config.yaml

--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "homepage": "./",
   "main": "src/electron-starter.js",
+  "version": "1.0.0-b22",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
