--- a/electron-react/package.json
+++ b/electron-react/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "homepage": "./",
   "main": "src/electron-starter.js",
-  "version": "1.0.0-b22",
+  "version": "0.1.22",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
