Add repo ref to test-cache checkout

--- a/.github/workflows/build-test-macos-core.yml
+++ b/.github/workflows/build-test-macos-core.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         repository: 'Chia-Network/test-cache'
         path: '.chia'
+        ref: 'master'
 
     - name: Link home directory
       run: |
