--- a/.github/workflows/build-test-ubuntu-core.yml
+++ b/.github/workflows/build-test-ubuntu-core.yml
@@ -58,7 +58,8 @@ jobs:
       with:
         repository: 'Chia-Network/test-cache'
         path: '.chia'
-
+        ref: 'master'
+        
     - name: Link home directory
       run: |
         cd $HOME
