make the super linter workflow run the same way other workflows do (and not twice on pull requests)

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -17,11 +17,13 @@ name: GithHub Super Linter
 #############################
 on:
   push:
-    branches-ignore:
-      - 'master'
+    branches:
+      - main
+    tags:
+        - '**'
   pull_request:
-    branches-ignore:
-      - 'master'
+    branches:
+      - '**'
 
 ###############
 # Set the Job #
