--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -84,7 +84,7 @@ jobs:
     - name: Checkout GUI
       uses: actions/checkout@v2
       with:
-        repository: 'chia-blockchain-gui'
+        repository: 'Chia-Network/chia-blockchain-gui'
         ref: 'main'
 
     - name: Run install script
