--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -86,12 +86,14 @@ jobs:
       with:
         repository: 'Chia-Network/chia-blockchain-gui'
         ref: 'main'
+        path: './chia-blockchain-gui'
 
     - name: Run install script
       env:
         INSTALL_PYTHON_VERSION: ${{ matrix.python-version }}
         BUILD_VDF_CLIENT: "N"
       run: |
+        ls
         sh install.sh
 
     - name: Setup Node 12.x
